Master/MongoDB-final/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
         # - containerPort: 8081
          - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  #namespace: mongo-database
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Cluster-issuer Change
spec:
  rules:
  - host: "mongodb.fabienganderatz.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb-svc 
            port:
              #number: 8081
              number: 80
  tls:
  - hosts:
    - mongodb.fabienganderatz.com
    secretName: mongodb-tls-secret
