Master/MongoDB-final/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Cluster-issuer Change
spec:
    rules:
    - host: mongodb.fabienganderatz.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mongodb-svc 
              port:
                number: 8081 # port 80 by default
    tls:
    - hosts:
      - mongodb.fabienganderatz.com
      secretName: mongodb-tls-secret
